// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WikiMarkup => ADF - force line break should detect invalid force line break 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "this is not a line break \\\\\\\\\\\\ not on second line",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF - force line break should detect the correct force line break 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "this-is-not-line-break\\\\\\\\but-this-one-is-line-break",
          "type": "text",
        },
        Object {
          "type": "hardBreak",
        },
        Object {
          "text": "second-line",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF - force line break should detect the correct force line break on same line 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "this-is-line-break",
          "type": "text",
        },
        Object {
          "type": "hardBreak",
        },
        Object {
          "text": " and-this-one-is-also-line-break",
          "type": "text",
        },
        Object {
          "type": "hardBreak",
        },
        Object {
          "text": "second-line",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF - force line break should detect the force line break correctly 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "this is a line break ",
          "type": "text",
        },
        Object {
          "type": "hardBreak",
        },
        Object {
          "text": " second line",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
